# langchain-treasurehunt

./: .gitignore  README.md  docker-compose.yml  langchain_treasurehunt.ipynb  nginx.conf  pyproject.toml
actor/: api.md  main.py  pyproject.toml  stmain.py
actor/actor/: main.py
actor/actor/agents/: hunter_agent.py  main_agent.py  rest_agent.py
actor/actor/third_parties/: apidocs.py
actor/agents/: main_agent.py  rest_agent.py
actor/third_parties/: apidocs.py
actor/tools/: tools.py
flask-api/: Dockerfile  app.py  pyproject.toml
react-app/: Dockerfile  package.json
react-app/public/: index.html
react-app/src/: GameInterface.js  index.js
