[tool.poetry]
name = "langchain-treasurehunt"
version = "0.1.0"
description = ""
authors = ["Luke31 <lukas.m.schmid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
python-dotenv = "^1.0.0"
openai = "^0.27.5"
langchain = "^0.0.172"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
