[tool.poetry]
name = "flask-api"
version = "0.1.0"
description = ""
authors = ["Luke31 <lukas.m.schmid@gmail.com>"]
readme = "README.md"
# packages = [{include = "flask-api"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-socketio = "^5.3.4"
flask-cors = "^3.0.10"
python-socketio = "5.7.2"
eventlet = "^0.33.3"
apiflask = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
